--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 # Core Libraries
 alembic==1.14.0
 fastapi==0.115.6
@@ -29,3 +28,9 @@ faker==33.1.0
 
 # Logging
 loguru==0.7.3
+
+# Linting and Formatting
+black==24.4.2
+isort==5.13.2
+flake8==7.0.0
+pre-commit==3.7.1
