--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,19 @@ services:
       - pgdata:/var/lib/postgresql/data
     networks:
       - fastapi_network
+    
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin4
+    restart: always
+    env_file:
+      - .env.pgadmin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+    networks:
+      - fastapi_network
 
 volumes:
   pgdata:
