Refactor user routing: consolidate user routes, update environment variable handling, and enhance error response consistency

--- a/.env
+++ b/.env
@@ -8,4 +8,5 @@ DB_TIMEOUT=30
 JWT_SECRET=your_jwt_secret
 JWT_EXPIRES_IN=36000
 JWT_ALGORITHM=HS256
-APP_ENV=development
+# Set the environment: dev, test, or prod
+ENVIRONMENT=dev
