Update JWT expiration variables in .env and env.example; add AccessToken and RefreshToken imports in alembic/env.py; add pytz to requirements.txt

--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ DB_PORT=5432
 DB_TIMEOUT=30
 
 JWT_SECRET=your_jwt_secret
-JWT_EXPIRES_IN=36000
+JWT_ACCESS_EXPIRES_IN=36000
+JWT_REFRESH_EXPIRES_IN=604800
 JWT_ALGORITHM=HS256
 # Set the environment: dev, test, or prod
 ENVIRONMENT=dev
