--- a/env.example
+++ b/env.example
@@ -6,6 +6,8 @@ DB_PORT=5432
 DB_TIMEOUT=30
 
 JWT_SECRET=your_jwt_secret
-JWT_EXPIRES_IN=36000
+JWT_ACCESS_EXPIRES_IN=36000
+JWT_REFRESH_EXPIRES_IN=604800
 JWT_ALGORITHM=HS256
-APP_ENV=development
+# Set the environment: dev, test, or prod
+ENVIRONMENT=dev
