--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ fastapi==0.115.6
 uvicorn==0.32.1
 sqlalchemy[asyncio]==2.0.36
 greenlet==3.1.1 # Required by SQLAlchemy for async support
+pytz==2025.2
 
 # Core Enhancements
 psycopg2-binary==2.9.10
