--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - LOG_LEVEL=debug
     command: >
       sh -c "if [ \"$APP_ENV\" = \"development\" ]; then \
-        uvicorn app.main:app --reload --host 0.0.0.0 --port 8000 --log-level debug; \
+        uvicorn app.main:app --reload --host 0.0.0.0 --port 8000 --log-level debug --reload-dir /code; \
         else uvicorn app.main:app --host 0.0.0.0 --port 8000 --log-level debug; fi"
     volumes:
       - .:/code
