--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ DB_PASSWORD=fastapi_password
 DB_PORT=5432
 DB_TIMEOUT=30
 
+REDIS_URL=redis://redis:6379/0
+
 JWT_SECRET=your_jwt_secret
 JWT_ACCESS_EXPIRES_IN=36000
 JWT_REFRESH_EXPIRES_IN=604800
