--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,15 @@ services:
     networks:
       - fastapi_network
 
+  redis:
+    image: redis:7
+    container_name: fastapi-redis
+    restart: always
+    ports:
+      - "6379:6379"
+    networks:
+      - fastapi_network
+
 volumes:
   pgdata:
 
