Refactor test base URL to use environment variable for consistency

--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ JWT_REFRESH_EXPIRES_IN=604800
 JWT_ALGORITHM=HS256
 # Set the environment: dev, test, or prod
 ENVIRONMENT=dev
+BASE_URL=http://localhost:8000
