--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,13 +4,16 @@ repos:
     hooks:
       - id: black
         language_version: python3
+        exclude: '^alembic/'
   - repo: https://github.com/PyCQA/isort
     rev: 5.13.2
     hooks:
       - id: isort
         language_version: python3
+        exclude: '^alembic/'
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
         language_version: python3
+        exclude: '^alembic/'
