Update CI workflow to enhance pre-commit hook output
- Modified the pre-commit command in the CI workflow to include verbose output and show diffs on failure, improving feedback during the CI process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run pre-commit hooks
         run: |
           pip install pre-commit
-          pre-commit run --all-files
+          pre-commit run --all-files --verbose --show-diff-on-failure 
       - name: Run tests with coverage
         run: |
           pytest --cov=app tests/
