--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
         run: |
           pip install pre-commit
           pre-commit run --all-files --verbose --show-diff-on-failure 
-      - name: Run tests with coverage
-        run: |
-          pytest --cov=app tests/
-      - name: Upload coverage report
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: .coverage 
+      # - name: Run tests with coverage
+      #   run: |
+      #     pytest --cov=app tests/
+      # - name: Upload coverage report
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: coverage-report
+      #     path: .coverage 
