--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - LOG_LEVEL=debug
     command: >
-      sh -c "if [ \"$APP_ENV\" = \"development\" ]; then \
+      sh -c "if [ \"$ENVIRONMENT\" = \"dev\" ]; then \
         uvicorn app.main:app --reload --host 0.0.0.0 --port 8000 --log-level debug --reload-dir /code; \
         else uvicorn app.main:app --host 0.0.0.0 --port 8000 --log-level debug; fi"
     volumes:
