Refactor configuration and schemas for improved performance and clarity
- Commented out pgAdmin service in docker-compose.yml for potential removal.
- Updated env.example to include Redis and SQLAlchemy connection pool settings for better performance.
- Changed Pydantic model configuration from `orm_mode` to `from_attributes` in authentication and user schemas for enhanced compatibility with attribute-based access.
- Enhanced RedisCache class to accept connection parameters for better configurability and performance.

--- a/env.example
+++ b/env.example
@@ -6,6 +6,15 @@ DB_PORT=5432
 DB_TIMEOUT=30
 
 REDIS_URL=redis://redis:6379/0
+REDIS_MAX_CONNECTIONS=10
+REDIS_TIMEOUT=5
+
+# SQLAlchemy DB pool settings
+DB_POOL_SIZE=10
+DB_MAX_OVERFLOW=20
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=1800
+DB_POOL_PRE_PING=True
 
 JWT_SECRET=your_jwt_secret
 JWT_ACCESS_EXPIRES_IN=36000
