--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,18 +39,18 @@ services:
       - fastapi_network
     command: ["postgres", "-c", "timezone=Asia/Dubai"]
 
-  pgadmin:
-    image: dpage/pgadmin4:latest
-    container_name: pgadmin4
-    restart: always
-    env_file:
-      - .env.pgadmin
-    ports:
-      - "5050:80"
-    depends_on:
-      - db
-    networks:
-      - fastapi_network
+  # pgadmin:
+  #   image: dpage/pgadmin4:latest
+  #   container_name: pgadmin4
+  #   restart: always
+  #   env_file:
+  #     - .env.pgadmin
+  #   ports:
+  #     - "5050:80"
+  #   depends_on:
+  #     - db
+  #   networks:
+  #     - fastapi_network
 
   redis:
     image: redis:7
