Refactor environment configuration: separate Redis settings and update example files

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
+# Set the environment: dev, test, or prod
+DEBUG=True
+ENVIRONMENT=dev
+BASE_URL=http://localhost:8000
+
 DB_NAME=fastapi_db
 DB_HOST=db
 DB_USER=fastapi_user
@@ -5,12 +10,11 @@ DB_PASSWORD=fastapi_password
 DB_PORT=5432
 DB_TIMEOUT=30
 
-REDIS_URL=redis://redis:6379/0
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
 
 JWT_SECRET=your_jwt_secret
 JWT_ACCESS_EXPIRES_IN=36000
 JWT_REFRESH_EXPIRES_IN=604800
 JWT_ALGORITHM=HS256
-# Set the environment: dev, test, or prod
-ENVIRONMENT=dev
-BASE_URL=http://localhost:8000
