--- a/env.example
+++ b/env.example
@@ -1,13 +1,13 @@
+DEBUG=True
+ENVIRONMENT=dev
+BASE_URL=http://localhost:8000
+
 DB_NAME=fastapi_db
 DB_HOST=db
 DB_USER=fastapi_user
 DB_PASSWORD=fastapi_password
 DB_PORT=5432
 DB_TIMEOUT=30
-
-REDIS_URL=redis://redis:6379/0
-REDIS_MAX_CONNECTIONS=10
-REDIS_TIMEOUT=5
 
 # SQLAlchemy DB pool settings
 DB_POOL_SIZE=10
@@ -16,10 +16,12 @@ DB_POOL_TIMEOUT=30
 DB_POOL_RECYCLE=1800
 DB_POOL_PRE_PING=True
 
+# Redis configuration
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+
 JWT_SECRET=your_jwt_secret
 JWT_ACCESS_EXPIRES_IN=36000
 JWT_REFRESH_EXPIRES_IN=604800
 JWT_ALGORITHM=HS256
-# Set the environment: dev, test, or prod
-ENVIRONMENT=dev
-BASE_URL=http://localhost:8000
