--- a/requirements.txt
+++ b/requirements.txt
@@ -3,34 +3,36 @@ alembic==1.14.0
 fastapi==0.115.6
 uvicorn==0.32.1
 sqlalchemy[asyncio]==2.0.36
-greenlet==3.1.1 # Required by SQLAlchemy for async support
-pytz==2025.2
-
-# Core Enhancements
+asyncpg==0.30.0
 psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 pydantic[email]==2.10.3
 pydantic-settings==2.6.1
 python-multipart==0.0.20
+greenlet==3.1.1  # Required by SQLAlchemy for async support
+pytz==2025.2
 
 # Authentication and Security
 httpx==0.28.1
-bcrypt==4.2.1 
-PyJWT==2.10.1 
+bcrypt==4.2.1
+PyJWT==2.10.1
+argon2-cffi==25.1.0
 
-# Asynchronous Features
-asyncpg==0.30.0
-pytest==8.3.4 
+# Caching & Async
 aiofiles==24.1.0
 redis==5.0.4
 
-# Testing
-pytest-asyncio==0.24.0
-faker==33.1.0
-pytest-cov==5.0.0
+# Task Queue
+celery[redis]==5.4.0
 
 # Logging
 loguru==0.7.3
+
+# Testing
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-cov==5.0.0
+faker==33.1.0
 
 # Linting and Formatting
 black==24.4.2
@@ -38,4 +40,5 @@ isort==5.13.2
 flake8==7.0.0
 pre-commit==3.7.1
 
-argon2-cffi==25.1.0
+# Optional: Production ASGI server
+# gunicorn==22.0.0
