Update Dockerfile and Celery configuration; install curl, define task queues, and adjust healthcheck settings

--- a/docker-compose-celery.yaml
+++ b/docker-compose-celery.yaml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
     container_name: celery-worker
-    command: celery -A app.integrations.celery_app.celery_app worker --loglevel=info
+    command: celery -A app.integrations.celery_app.celery_app worker --loglevel=info -Q auth-queue,user-queue
     env_file: .env
     volumes:
       - .:/code
