Update Celery configuration; define CELERY_BROKER_URL in .env and adjust Flower service to use it

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ DB_TIMEOUT=30
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
+CELERY_BROKER_URL=redis://redis:6379/0
 
 JWT_SECRET=your_jwt_secret
 JWT_ACCESS_EXPIRES_IN=36000
