--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core Libraries
 alembic==1.14.0
-fastapi==0.115.6
+fastapi[all]==0.115.6
 uvicorn==0.32.1
 sqlalchemy[asyncio]==2.0.36
 asyncpg==0.30.0
