Add DB_TEST_NAME to .env and update settings for async test database URL; refactor test cases to use async_client fixture

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ ENVIRONMENT=dev
 BASE_URL=http://localhost:8000
 
 DB_NAME=fastapi_db
+DB_TEST_NAME=fastapi_test_db
 DB_HOST=db
 DB_USER=fastapi_user
 DB_PASSWORD=fastapi_password
