Add AWS S3 configuration to environment and update settings; include GZip middleware for improved performance

--- a/.env
+++ b/.env
@@ -20,3 +20,8 @@ JWT_SECRET=your_jwt_secret
 JWT_ACCESS_EXPIRES_IN=36000
 JWT_REFRESH_EXPIRES_IN=604800
 JWT_ALGORITHM=HS256
+
+S3_ACCESS_KEY=AKIAWLCKC24ORGZWKBYKwrfwrf 
+S3_SECRET_KEY=RwxDDLu7fXxvTyaw4gT/TXuIN+reHjklnk
+S3_REGION=me-central-1
+S3_BUCKET=test-user-bucket.skyloov.com
